залил футер и навбар

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,226 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Дипломный проект</title>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/owl.carousel.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <nav class="nav">
+    <div class="container">
+            <div class="nav-hat">
+              <div class="logo">
+                <img src="img/nav/logo.png" alt="">
+              </div>
+              <form action="#" class="form form-nav">
+                <input type="search" placeholder="Поиск по сайту" class="input nav-input">
+              </form>
+              <div class="nav__busket">
+                <a href="#" class="nav__link"><img src="img/nav/busket-icon.png" alt="ваша корзина">
+                  <span class="nav__basket-text">15 000 рублей</span></a>
+              </div>
+              <div class="nav__phone">
+                <a class="nav__link type=" tel:+79504302525" href="#">
+                  <img src="img/nav/phone-icon.png" alt="позвоните нам">
+
+                  <span class="nav__phone-text">+7 (950) 430-25-25</span>
+                </a>
+              </div>
+              <div class="nav__phone">
+                <a class="nav__link type=" tel:+79993504550" href="#">
+                  <img src="img/nav/phone-icon.png" alt="позвоните нам">
+                  <span class="nav__phone-text">+7 (999) 350-45-50</span>
+                </a>
+              </div>
+              <!-- /.nav_firstphone -->
+              <!-- /.nav__busket -->
+            </div>
+            <!-- /.nav-hat -->
+    </div>
+    <div class="nav-line"></div>
+    <div class="container">
+      <div class="nav-list">
+        <ul class="navbar">
+          <li class="navbar__item" id="nav_list"><a href="#">Каталог</a>
+            <ul class="visible-menu" id="submenu">
+              <li class="submenu">
+                <span class="submenu__title">Кухня</span>
+                <ul class="submenu-block">
+                  <li class="submenu__item"><a href="#"> Обеденные столы</a></li>
+                  <li class="submenu__item"><a href="#"> Кухонные уголки</a></li>
+                  <li class="submenu__item"><a href="#"> Стулья</a></li>
+                  <li class="submenu__item"><a href="#"> Табуреты</a></li>
+                  <li class="submenu__item"><a href="#"> Комплектующие</a></li>
+                </ul>
+              </li>
+              <li class="submenu">
+                <span class="submenu__title">Гостинная</span>
+                <ul class="submenu-block">
+                  <li class="submenu__item"><a href="#">Шкафы</a> </li>
+                  <li class="submenu__item"><a href="#">ТВ-тумбы</a> </li>
+                  <li class="submenu__item"><a href="#">Журнальные столы</a> </li>
+                  <li class="submenu__item"><a href="#">Мягкая мебель</a> </li>
+                  <li class="submenu__item"><a href="#">Стелажы</a> </li>
+                </ul>
+              </li>
+              <li class="submenu">
+                <span class="submenu__title">Спальня</span>
+                <ul class="submenu-block">
+                  <li class="submenu__item"><a href="#"> Комоды</a> </li>
+                  <li class="submenu__item"><a href="#"> Тумбы прикроватные</a> </li>
+                  <li class="submenu__item"><a href="#"> Туалетные столики</a> </li>
+                  <li class="submenu__item"><a href="#"> Кровати</a> </li>
+                  <li class="submenu__item"><a href="#"> Матрасы</a> </li>
+                </ul>
+              </li>
+              <li class="submenu">
+                <span class="submenu__title">Детская</span>
+                <ul class="submenu-block">
+                  <li class="submenu__item"><a href="#">Письменные столы</a> </li>
+                  <li class="submenu__item"><a href="#">Компьютерные столы</a> </li>
+                  <li class="submenu__item"><a href="#">Кровати детские</a> </li>
+                  <li class="submenu__item"><a href="#">Шкафы детские</a> </li>
+                  <li class="submenu__item"><a href="#">Комоды и тумбы</a> </li>
+                </ul>
+              </li>
+              <li class="submenu">
+                <span class="submenu__title">Прихожая</span>
+                <ul class="submenu-block">
+                  <li class="submenu__item"><a href="#">Обувницы</a> </li>
+                  <li class="submenu__item"><a href="#">Шкафы</a> </li>
+                  <li class="submenu__item"><a href="#">Зеркала</a> </li>
+                  <li class="submenu__item"><a href="#">Вешалки</a> </li>
+                </ul>
+              </li>
+            </ul>
+            <!-- /.visible_menu -->
+          </li>
+          <!-- /.navbar__iteam -->
+          <li class="navbar__item"><a href="#">услуги</a> </li>
+          <!-- /.navbar__iteam -->
+          <li class="navbar__item"><a href="#">о магазине</a> </li>
+          <!-- /.navbar__iteam -->
+          <li class="navbar__item navbar__sail"><a href="#">Акции и распродажа</a> </li>
+          <!-- /.navbar__iteam -->
+          <li class="navbar__item"><a href="#">доставка и оплата</a> </li>
+          <!-- /.navbar__iteam -->
+          <li class="navbar__item"><a href="#">Контакты</a> </li>
+          <!-- /.navbar__iteam -->
+        </ul>
+        <div class="nav__buttons">
+          <button class="button nav-button__order"> Вызывать замерщика</button>
+          <button class="button nav-button__call"> Обратный звонок </button>
+        </div>
+      </div>
+      <!-- /.nav-list -->
+    </div>
+    <!-- /.container -->
+  </nav>
+  <main>
+    <section class="section portfolio">
+      <div class="container">
+        <h2 class="portfolio-title title">новое поступление</h2>
+        <!-- /.portfolio-title title -->
+        <span class="portfolio-subtitle subtitle">Новинки каталога</span>
+        <!-- /.portfolio-subtitle subtitle -->
+        <div class="portfolio-block"></div>
+        <!-- /.portfolio-block -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.section portfolio -->
+  </main>
+  <!-- mein -->
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-contacts">
+        <div class="contacts__logo">
+          <img src="img/nav/logo.png" alt="наш логотип">
+        </div>
+        <span class="contact__text">Современная и высококачаственная мебель для вашего дома</span>
+        <div class="contact__phone">
+          <a class="contact__link type=" tel:+79504302525" href="#">
+            <img src="img/nav/phone-icon.png" alt="позвоните нам">
+            <span class="contacts__phone-text">+7 (950) 430-25-25</span>
+          </a>
+        </div>
+        <div class="contact__phone">
+          <a class="contact__link type=" tel:+79993504550" href="#">
+            <img class="contact__link__last" src="img/nav/phone-icon.png" alt="позвоните нам">
+            <span class="contacts__phone-text">+7 (999) 350-45-50</span>
+          </a>
+        </div>
+      </div>
+    </div>
+    <!-- /.footer-contacts -->
+    <div class="footer-content">
+      <div class="container">
+        <ul class="footer-nav">
+          <li class="footer-directions">
+            <ul class="directions__item directions-kitchen"> <a class="directions-catalog"href="#">Кухни</a>
+              <li class="directions__links"><a href="#">Комоды </a> </li>
+              <li class="directions__links"><a href="#">Тумбы прикроватные </a> </li>
+              <li class="directions__links"><a href="#">Кровати </a> </li>
+              <li class="directions__links"><a href="#">Матрасы </a> </li>
+            </ul>
+          </li>
+          <!-- /.footer-directions -->
+          <li class="footer-directions">
+            <ul class="directions__item directions-livingroom"> <a class="directions-catalog" href="#">Гостинные</a>
+              <li class="directions__links"><a href="#">Комоды </a> </li>
+              <li class="directions__links"><a href="#">Тумбы прикроватные </a> </li>
+              <li class="directions__links"><a href="#">Кровати </a> </li>
+              <li class="directions__links"><a href="#">Матрасы </a> </li>
+            </ul>
+          </li>
+          <!-- /.footer-directions -->
+          <li class="footer-directions">
+            <ul class="directions__item directions-bedroom"> <a class="directions-catalog" href="#">Спальни</a>
+              <li class="directions__links"><a href="#">Комоды </a> </li>
+              <li class="directions__links"><a href="#">Тумбы прикроватные </a> </li>
+              <li class="directions__links"><a href="#">Кровати </a> </li>
+              <li class="directions__links"><a href="#">Матрасы </a> </li>
+            </ul>
+          </li>
+          <!-- /.footer-directions -->
+          <li class="footer-directions">
+            <ul class="directions__item directions-childroom"> <a class="directions-catalog" href="#">Детские</a>
+              <li class="directions__links"><a href="#">Комоды </a> </li>
+              <li class="directions__links"><a href="#">Тумбы прикроватные </a> </li>
+              <li class="directions__links"><a href="#">Кровати </a> </li>
+              <li class="directions__links"><a href="#">Матрасы </a> </li>
+            </ul>
+          </li>
+          <!-- /.footer-directions -->
+          <li class="footer-directions directions-exit">
+            <ul class="directions__item"> <a class="directions-catalog"href="#">Прихожие</a>
+              <li class="directions__links"><a href="#">Комоды </a> </li>
+              <li class="directions__links"><a href="#">Тумбы прикроватные </a> </li>
+              <li class="directions__links"><a href="#">Кровати </a> </li>
+              <li class="directions__links"><a href="#">Матрасы </a> </li>
+            </ul>
+          </li>
+          <!-- /.footer-directions -->
+        </ul>
+        <!-- /.footer-nav -->
+      </div>
+    </div>
+    <!-- /.footer-links -->
+    <div class="footer__coopyiraght">
+      <div class="container">
+        <div class="footer-block">
+          <span class="coopyright">© 2008-2019 МебельLike Все права защищены</span>
+          <strong class="author-tag">Создание сайта</strong>
+        </div>
+      </div>
+    </div>
+    <!-- /.footer__coopyiraght -->
+    <!-- /.container -->
+  </footer>
+  <!-- /.footer -->
+  <script src="js/jquery-3.4.1.min.js"></script>
+  <script src ="js/owl.carousel.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
