несколько секций главной страницы

--- a/src/index.html
+++ b/src/index.html
@@ -128,12 +128,103 @@
         <!-- /.portfolio-title title -->
         <span class="portfolio-subtitle subtitle">Новинки каталога</span>
         <!-- /.portfolio-subtitle subtitle -->
-        <div class="portfolio-block"></div>
+        <div class="portfolio-block">
+          <div class="portfolio-item">
+            <img class="portfolio__image" src="img/portfolio/kitchen.jpg" alt="кухня велас">
+            <button class="button portfolio__button button-velas">Кухня "Велас"</button>
+          </div>
+          <div class="portfolio-item">
+            <img class="portfolio__image" src="img/portfolio/livingroom.jpg" alt="кухня велас">
+            <button class="button portfolio__button button-irrida">Гостинная "Иррида"</button>
+          </div>
+          <div class="portfolio-item">
+            <img class="portfolio__image" src="img/portfolio/livingroon_2.jpg" alt="кухня велас">
+            <button class="button portfolio__button button-purrino">Диван "Пуррино"</button>
+          </div>
+          <div class="portfolio-item">
+            <img class="portfolio__image" src="img/portfolio/livingroon_3.jpg" alt="кухня велас">
+            <button class="button portfolio__button button-iddida">Гостинная "Иддида"</button>
+          </div>
+          <div class="portfolio-item">
+            <img src="img="img/portfolio/kitchen.png"" alt="">
+          </div>
+          <div class="portfolio-item">
+            <img src="img="img/portfolio/kitchen.png"" alt="">
+          </div>
+          <div class="portfolio-item">
+            <img src="img="img/portfolio/kitchen.png"" alt="">
+          </div>
+        </div>
         <!-- /.portfolio-block -->
+          <button class="button portfolio-full__button">Полный каталог</button>
       </div>
       <!-- /.container -->
     </section>
     <!-- /.section portfolio -->
+    <section class="section offers">
+      <div class="container">
+        <h2 class="title offers-title">преимущества работы с нами</h2>
+        <span class="subtitle offers-subtitle">Почему стоит заказывать у нас?</span>
+        <div class="offers-block">
+          <div class="block__image">
+          <img src="img/offers/blank.png" alt=""> 
+          </div>
+          <!-- /.block__image -->
+          <div class="block__text">
+            <h4 class="block__title">Профессиональный расчет</h4>
+            <p class="offer__text">Мы осуществляем професссиональный и быстрый расчет кухни и мебели по вашим размерам </p>
+          </div>
+          <!-- /.block__text -->
+          <div class="block__image">
+            <img src="img/offers/like.png" alt="">  
+          </div>
+          <!-- /.block__image -->
+          <div class="block__text">
+            <h4 class="block__title">отличные результаты</h4>
+            <p class="offer__text">Более 1 000 довольный покупателей уже пользуются мебелью от “МебельLike”</p>
+          </div>  
+          <!-- /.block__text -->
+          <div class="block__text">
+            <h4 class="block__title">ценовая политика</h4>
+            <p class="offer__text">В нашей компании создана оптимальная ценовая политика для наших покупателей</p>
+          </div>
+          <!-- /.block__text -->
+          <div class="block__image">
+            <img src="img/offers/coins.png" alt="">
+          </div>
+          <!-- /.block__image -->
+          <div class="block__text">
+            <h4 class="block__title">Профессиональные сотрудники</h4>
+            <p class="offer__text">Работают квалифицированные сотрудники с большим опытом работы</p>
+          </div>
+          <!-- /.block__text -->
+          <div class="block__image">
+            <img src="img/offers/face.png" alt="">
+          </div>
+          <!-- /.block__image -->
+          
+        </div>
+        <!-- /.offers-block -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.section offers -->
+
+    <section class="section about">
+      <div class="container">
+        <div class="about-block">
+          <h2 class="title about-title">о КОМПАНИИ</h2>
+          <!-- /.title about-title -->
+          <span class="subtitle about-subtitle">Немного интересного о нас</span>
+          <!-- /.subtitle about-subtitle -->
+          <p class="about-text">Не следует, однако забывать, что начало повседневной работы по формированию позиции требуют определения и уточнения модели развития. Таким образом укрепление и развитие структуры играет важную роль в формировании существенных финансовых и административных условий. Повседневная практика показывает, что постоянное информационно-пропагандистское обеспечение нашей деятельности играет важную роль в формировании соответствующий условий активизации. </p>
+          <!-- /.about-text -->
+        </div>
+        <!-- /.about-block -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.section about -->
   </main>
   <!-- mein -->
   <footer class="footer">
