--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/owl.carousel.min.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/slick.css">
+  <link rel="stylesheet" href="css/slick-theme.css">
 </head>
 <body>
   <nav class="nav">
@@ -122,6 +124,43 @@
     <!-- /.container -->
   </nav>
   <main>
+    <section class="section header">
+      <div class="owl-carousel">
+        <div class="slider-item">
+          <div class="owl-block"><span class="owl-title">Диван - "Бруно"</span><span class="owl-subtitle">Мягкая
+              мебель</span>
+          </div>
+          <div>
+            <img class="owl-nav" src="img/header/item-3.jpg" alt="">
+          </div>
+        </div>
+        <div class="slider-item">
+          <div class="owl-block"><span class="owl-title">Диван - "Ватник"</span><span class="owl-subtitle">Мягкая
+              мебель</span>
+          </div>
+          <div>
+            <img class="owl-nav" src="img/header-slider/Слой_69.png" alt="">
+          </div>
+        </div>
+        <div class="slider-item">
+          <div class="owl-block"><span class="owl-title">Диван - "Бруно"</span><span class="owl-subtitle">Мягкая
+              мебель</span>
+          </div>
+          <div>
+            <img class="owl-nav" src="img/header/item-3.jpg" alt="">
+          </div>
+        </div>
+        <div class="slider-item">
+          <div class="owl-block"><span class="owl-title">Диван - "Ватник'"</span><span class="owl-subtitle">Мягкая
+              мебель</span>
+          </div>
+          <div>
+            <img class="owl-nav" src="img/header/item-1.jpg" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="section portfolio">
       <div class="container">
         <h2 class="portfolio-title title">новое поступление</h2>
@@ -161,6 +200,43 @@
       <!-- /.container -->
     </section>
     <!-- /.section portfolio -->
+    <section class="section sails" style="display: flex;">
+      <div class="container">
+        <div class="sails-block">
+          <h4 class="sails-subtitle">акция месяца</h4>
+          <!-- /.h4 sails-subtitle -->
+          <h2 class="sails-title">при заказе любого дивана скидка 10%</h2>
+          <!-- /.sails-title -->
+          <p class="sails-text">Посмотрите, что покупают люди чаще всего, быть может вы найдете свою мечту. Высококачественная продукция и экологически чистый материал.</p>
+          <!-- /.sails-text -->
+          <div class="sails-buttons">
+            <button class="button sails__button">Все акции</button>
+            <button class="button more__button">Подробней <img src="img/more-info.png" alt="узнать подробнее"></button>
+          </div>
+          <div class="top-dots"></div>
+          <!-- /.sails-buttons -->
+        </div>
+      </div>
+      <!-- /.container -->
+      <div class="sails-slider slider">
+        <div class="sails-item" slider-item>
+          <img src="img/sails/couch.jpg" alt="">
+        </div>
+        <div class="sails-item slider-item">
+          <img src="img/sails/couch.jpg" alt="">
+        </div>
+        <div class="sails-item slider-item">
+          <img src="img/sails/couch.jpg" alt="">
+        </div>
+        <div class="sails-item slider-item">
+          <img src="img/sails/couch.jpg" alt="">
+        </div>
+        <div class="sails-item slider-item">
+          <img src="img/sails/couch.jpg" alt="">
+        </div>
+      </div>
+    </section>
+    <!-- /.section seils -->
     <section class="section offers">
       <div class="container">
         <h2 class="title offers-title">преимущества работы с нами</h2>
@@ -225,6 +301,65 @@
       <!-- /.container -->
     </section>
     <!-- /.section about -->
+    <section class="section news">
+      <div class="container">
+        <h2 class="title news__title">новости</h2>
+        <span class="subtitle news__subtitle">Самые свежие новости нашей компании</span>
+        <div class="news-block">
+          <div class="news-card">
+            <img src="img/news/kitchen.jpg" alt="кухня">
+            <h4 class="news-card__title">новый год - скидки всем новым клиентам</h4>
+            <p class="news__text">Мы осуществляем професссиональный и быстрый расчет кухни и мебели</p>
+            <button class="button more__button news__button">Подробней <img src="img/more-info.png" alt="узнать подробнее"></button>
+            <span class="news__date"><strong>20</strong>  <br> Декабря</span>
+          </div>
+          <!-- /.news-card -->
+          <div class="news-card">
+            <img src="img/news/woman.jpg" alt="девушка с подарками">
+            <h4 class="news-card__title">новый год - скидки всем новым клиентам</h4>
+            <p class="news__text">Мы осуществляем професссиональный и быстрый расчет кухни и мебели</p>
+            <button class="button more__button news__button">Подробней <img src="img/more-info.png" alt="узнать подробнее"></button>
+            <span class="news__date"><strong>20</strong>  <br> Декабря</span>
+          </div>
+          <!-- /.news-card -->
+          <div class="news-card">
+            <img src="img/news/couch.jpg" alt="диван">
+            <h4 class="news-card__title">новый год - скидки всем новым клиентам</h4>
+            <p class="news__text">Мы осуществляем професссиональный и быстрый расчет кухни и мебели</p>
+            <button class="button more__button news__button ">Подробней <img src="img/more-info.png" alt="узнать подробнее"></button>
+            <span class="news__date"><strong>20</strong>  <br> Декабря</span>
+          </div>
+          <!-- /.news-card -->
+          <!-- /.button news__button -->
+        </div>
+        <!-- /.news-block -->
+        <button class="button news-button ">Все новости</button>
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.section news -->
+    <section class="section brif">
+      <div class="container">
+        <div class="brif-block">
+          <div class="brif__banner">
+            <img src="img/brif/worker.jpg" alt="рабочий фирмы">
+          </div>
+          <!-- /.brif__banner -->
+          <div class="brif-box">
+            <h2 class="brif__title">Пригласить <br> замерщика</h2>
+            <span class="brif__text">Отправьте заявку на замер и мы вместе расчитаем точную стоимость вашей новой мебели или
+              кухни</span>
+            <form action="#" class="brif__form" id="brof-form">
+              <input type="name">
+              <input type="tel">
+              <button class="buttob brif__button">Пригласить</button>
+            </form>
+          </div>
+        </div>
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.section brif -->
   </main>
   <!-- mein -->
   <footer class="footer">
@@ -317,5 +452,6 @@
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src ="js/owl.carousel.min.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/slick.min.js"></script>
 </body>
 </html>
