сделал вторую секцию адаптирова до мобильной версии

--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@
       <input type="text" class="input nav__input" placeholder="Поиск по сайту">
       <ul>
         <li class="nav-contacts nav-contacts__list">
-          <img class="nav-contacts__img" src="img/nav_slider/many.png" alt="#">15 000 рублей</li>
+          <img class="nav-contacts__img" src="img/nav_slider/many.png" alt="#"><a href="#">15 000 рублей</a></li>
         <li class="nav-contacts nav-contacts__list">
           <img class="nav-contacts__img" src="img/nav_slider/tell.png" alt="phone">
           <a class="nav-contacts__phone main" href="tel:+7(950)430-25-25">+7 (950) 430-25-25</a>
@@ -179,17 +179,16 @@
       <li class="navbar__iteam"><a class="navbar__navigation" href="#">Контакты</a> </li>
       <!-- /.navbar__iteam -->
       <div class="navbar-btn">
-        <button class="btn button-warning button-warning__navbar" id="invite-anchor">Вызвать замерщика</button>
-        <button class="btn button-success button-success__navbar" id="callorder-anchor">Обратный звонок</button>
+        <button class="button btn button-warning button-warning__navbar" id="invite-anchor">Вызвать замерщика</button>
+        <button class="button btn button-success button-success__navbar" id="callorder-anchor">Обратный звонок</button>
       </div>
     </ul>
     <div class="navbar-btnmobile">
-      <button class="btn button-warning button-warning__navbar" id="invite-anchor">Вызвать замерщика</button>
-      <button class="btn button-success button-success__navbar" id="callorder-anchor">Обратный звонок</button>
+      <button class=" btn button-warning button-warning__navbar" id="invite-anchor">Вызвать замерщика</button>
+      <button class=" btn button-success button-success__navbar" id="callorder-anchor">Обратный звонок</button>
     </div>
     <!-- /.nevbar
   </div>
-
 <!--   </header> -->
   </div>
   <main>
@@ -217,14 +216,14 @@
           </a>
         </div>
         <div class="slider__img">
-          <img class="slider__img" src="img/header/item-3.jpg" alt="">
+          <img class="slider__img" src="img/header/item-4.jpg" alt="">
           <a class="button button__header" href="#">
           <h6>Диван "Бурино"</h6>
           <span>Мягкая мебель</span>
           </a>
         </div>
         <div class="slider__img">
-          <img class="slider__img" src="img/header/item-3.jpg" alt="">
+          <img class="slider__img" src="img/header/item-5.jpg" alt="">
           <a class="button button__header" href="#">
           <h6>Диван "Джиро"</h6>
           <span>Мягкая мебель</span>
@@ -256,15 +255,7 @@
             <img class="portfolio__image" src="img/portfolio/livingroon_3.jpg" alt="кухня велас">
             <button class="button portfolio__button button-iddida">Гостинная "Иддида"</button>
           </div>
-          <div class="portfolio-item">
-            <img src="img="img/portfolio/kitchen.png"" alt="">
-          </div>
-          <div class="portfolio-item">
-            <img src="img="img/portfolio/kitchen.png"" alt="">
-          </div>
-          <div class="portfolio-item">
-            <img src="img="img/portfolio/kitchen.png"" alt="">
-          </div>
+      
           
         </div>
         <!-- /.portfolio-block -->
@@ -476,6 +467,7 @@
     </section>
     <!-- /.section news -->
     <section class="section brif">
+      <div class="brif-bg__line"></div>
       <div class="container">
         <div class="brif-block">
           <div class="brif__banner">
@@ -554,13 +546,13 @@
         </div>
         <span class="contact__text">Современная и высококачаственная мебель для вашего дома</span>
         <div class="contact__phone">
-          <a class="contact__link type=" tel:+79504302525" href="#">
+          <a class="contact__link" type="tel:+79504302525" href="#">
             <img src="img/nav/phone-icon.png" alt="позвоните нам">
             <span class="contacts__phone-text">+7 (950) 430-25-25</span>
           </a>
         </div>
         <div class="contact__phone">
-          <a class="contact__link type=" tel:+79993504550" href="#">
+          <a class="contact__link" type="tel:+79993504550" href="#">
             <img class="contact__link__last" src="img/nav/phone-icon.png" alt="позвоните нам">
             <span class="contacts__phone-text">+7 (999) 350-45-50</span>
           </a>
@@ -639,6 +631,7 @@
   <script src="js/jquery.maskedinput.min.js"></script>
   <script src="js/main.js"></script>
   <script src="js/slick.min.js"></script>
+  <script src="js/slider-card.js"></script>
   
 </body>
 </html>
